destinationruletlsenabled.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Prohibits disabling TLS for all hosts and host subsets in Istio DestinationRules.
      Introduced in ACM v1.4.0.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Prohibits disabling TLS for all hosts and host subsets in Istio DestinationRules. Introduced in ACM v1.4.0."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"destinationruletlsenabled","ownerReferences":[{"apiVersion":"configmanagement.gke.io/v1","blo [...]
  creationTimestamp: "2021-09-01T19:15:20Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:20Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:15:25Z"
  name: destinationruletlsenabled
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283385"
  uid: cd4cce1d-1903-4a29-96c6-7b04ea9c65c6
spec:
  crd:
    spec:
      names:
        kind: DestinationRuleTLSEnabled
      validation:
        legacySchema: true
        openAPIV3Schema: {}
  targets:
  - rego: |
      package asm.guardrails.destinationruletlsenabled

      # spec.trafficPolicy.tls.mode == DISABLE
      violation[{"msg": msg}] {
        d := input.review.object

        d.apiVersion == "networking.istio.io/v1alpha3"
        d.kind == "DestinationRule"

        tpl := d.spec.trafficPolicy[_]

        tpl == {"mode": "DISABLE"}

        msg := sprintf("spec.trafficPolicy.tls.mode == DISABLE for host(s): %v", [d.spec.host])
      }

      # spec.subsets[].trafficPolicy.tls.mode == DISABLE
      violation[{"msg": msg}] {
        d := input.review.object

        d.apiVersion == "networking.istio.io/v1alpha3"
        d.kind == "DestinationRule"

        subset := d.spec.subsets[_]
        subset.trafficPolicy == {"tls": {"mode": "DISABLE"}}

        msg := sprintf("subsets[].trafficPolicy.tls.mode == DISABLE for host-subset: %v-%v", [d.spec.host, subset.name])
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: cd4cce1d-1903-4a29-96c6-7b04ea9c65c6
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: cd4cce1d-1903-4a29-96c6-7b04ea9c65c6
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: cd4cce1d-1903-4a29-96c6-7b04ea9c65c6
  created: true
